# tensugo

./: .gitattributes  .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  version.json  vite.config.ts
Docs/: BRG-Design-1.0.md  Code-Structure.md  KataGo-Analysis-Numbers.md  KataGo-Engine-Configuration-Guide.md  Release-v0.1.md  Research-Doc-Design-V1.md  Research-Document-System.md  TSG-Design-1.0.md  User-Guide.md
Prompt/: OGS直播.txt  关于研究文档数据结构的讨论.txt  围棋研究功能和保存格式.md
docs/: CNAME  EagleEye-Review.md  README.md  Research-Document-System.md  Windows-KataGo-Engine.md  index.html  styles.css
docs_tmp/: CNAME  index.html  styles.css  天书报告吻合度吻合率.md
releases/: README.md
scripts/: bump-version.mjs  clean-tauri-cache.mjs  generate-icon.mjs  install-mac-app.sh  label-mac-artifact.mjs  package-windows.ps1
src/: i18n.ts  main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/katago/: .gitignore  README.md
src-tauri/resources/katago/configs/human/: gtp_human10k_search_example.cfg  gtp_human15k_search_example.cfg  gtp_human1d_search_example.cfg  gtp_human1k_search_example.cfg  gtp_human20k_search_example.cfg  gtp_human2d_search_example.cfg  gtp_human2k_search_example.cfg  gtp_human3d_search_example.cfg  gtp_human3k_search_example.cfg  gtp_human4d_search_example.cfg  gtp_human4k_search_example.cfg  gtp_human5d_search_example.cfg  gtp_human5k_search_example.cfg  gtp_human6d_search_example.cfg  gtp_human6k_search_example.cfg  gtp_human7d_search_example.cfg  gtp_human7k_search_example.cfg  gtp_human8d_search_example.cfg  gtp_human8k_search_example.cfg  gtp_human9k_search_example.cfg
src-tauri/src/: engine_discovery.rs  lib.rs  main.rs
src-tauri/src/platform/: common.rs  desktop_other.rs  macos.rs  mobile.rs  mod.rs  windows.rs
tests/: engineProfileList.test.ts  (+3 more)
(+94 files in other folders)
