[package]
name = "tensugo"
version = "0.5.79"
description = "TensuGo desktop application"
authors = ["TensuGo contributors"]
edition = "2021"

[lib]
name = "tensugo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
rfd = "0.15"
