[package]
name = "tensugo"
version = "0.6.87"
description = "TensuGo desktop application"
authors = ["TensuGo contributors"]
edition = "2021"

[lib]
name = "tensugo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = { version = "0.19", features = ["with-serde_json-1"] }

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power"] }
